[package]
name = "rust_cast"
description = "Library that allows you to communicate with Google Cast enabled devices (e.g. Chromecast)."
documentation = "https://docs.rs/crate/rust_cast/"
homepage = "https://github.com/azasypkin/rust-cast"
repository = "https://github.com/azasypkin/rust-cast"
readme = "README.md"
license = "MIT"
keywords = ["cast", "chromecast", "google"]
version = "0.19.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]
categories = ["api-bindings", "hardware-support", "multimedia"]
edition = "2021"
exclude = [
    ".github/*",
    "examples/*",
    "protobuf/*",
]

[dependencies]
bytes = "1.5.0"
futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
log = "0.4"
protobuf = "=3.4.0"
rustls = "0.23"
rustls-native-certs = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["io-util", "macros", "net", "sync"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
ansi_term = "0.12.1"
docopt = "1.1.1"
env_logger = "0.11.2"
mdns-sd = "0.10.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.3"

[build-dependencies]
protobuf-codegen = "=3.4.0"

[features]
thread_safe = []
